--- a/WiredBrainCoffee.Generators/WiredBrainCoffee.Generators.csproj
+++ b/WiredBrainCoffee.Generators/WiredBrainCoffee.Generators.csproj
@@ -2,10 +2,10 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
-		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 		<IsRoslynComponent>true</IsRoslynComponent>
+		<Nullable>enable</Nullable>
 		<LangVersion>10.0</LangVersion>
+		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 	</PropertyGroup>
 
 	<ItemGroup>
